--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
     margin: 0 0;
 }
 
+
 body nav {
     background-color: var(--color-accent);
 }
@@ -60,4 +61,51 @@ nav {
 main {
     margin-bottom: 45px;
     margin-top: 45px;
+    max-width: 300px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*why is this not centering my main element*/
+}
+
+main div h1, div h2 {
+    color: var(--color-dark);
+    font-family: var(--font--serif);
+    line-height: 1.3;
+    text-align: center;
+}
+
+main div p {
+    font-size: 1.4rem;
+    text-align: center;
+    line-height: 1.4;
+}
+
+main div p.time {
+    font-size: 1.3rem;
+}
+
+main div ul li {
+    line-height: 1.4rem;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer p {
+    background-color: var(--color-accent);
+    color: var(--color-light);
+    font-family: var(--font--serif);
+    height: 30px;
+    margin: 20px 0 0;
+    padding: 7px;
+}
+
+footer p a {
+    text-decoration: none;
+    color: var(--color-light);
 }
