--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,64 @@ body nav {
     background-color: var(--color-accent);
 }
 
+nav {
+    position: fixed;
+    width: 100%;
+    top: 0; 
+}
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--color-accent);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--color-light);
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidebar a:hover {
+    color: var(--color-dark);
+  }
+  
+  .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 46px;
+    margin-left: 50px;
+  }
+  
+  .openbtn {
+    font-size: 30px;
+    cursor: pointer;
+    background-color: var(--color-accent);
+    color: var(--color-dark);
+    border: none;
+  }
+  
+  .openbtn:hover {
+    color: var(--color-light);
+  }
+  
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+/*
 .container {
     display: inline-block;
     cursor: pointer;
@@ -47,7 +105,6 @@ body nav {
     transition: 0.4s;
 }
 
-/*Transition bars to X*/
 .change .bar1 {
     transform: translate(0, 11px) rotate(-45deg);
 }
@@ -59,34 +116,11 @@ body nav {
 .change .bar3 {
     transform: translate(0, -11px) rotate(45deg);
 }
-
-body nav ul {
-    list-style: none;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-/*how to make nav text bold??*/
-
-body nav ul li a {
-    color: var(--color-light);
-    text-decoration: none;
-}
-
-nav {
-    position: fixed;
-    width: 100%;
-    top: 0; 
-}
+*/
 
 main {
     margin-bottom: 45px;
-    margin-top: 45px;
+    margin-top: 65px;
     max-width: 300px;
 
     display: flex;
