--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,23 @@ main div ul li {
     line-height: 1.4rem;
 }
 
+main div.left {
+    margin-top: 45px;
+    transform: rotate(-20deg);
+}
+
+main div.right {
+    margin-top: 45px;
+    transform: rotate(20deg); 
+}
+
+@media (min-width: 600px) {
+    figure {
+        display: flex;
+        flex-direction: row;
+    }
+}
+
 footer {
     position: fixed;
     bottom: 0;
