--- a/css/styles.css
+++ b/css/styles.css
@@ -123,9 +123,8 @@ nav {
 */
 
 main {
-    margin-bottom: 45px;
-    margin-top: 65px;
-    max-width: 300px;
+    margin: 65px 35px 45px;
+    max-width: 100vw;
 }
 
 main div h1, div h2 {
