--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,11 @@ main div ul li {
 
 
 
+main div figure.flip:hover {
+    transform: rotateY(180deg);
+    transition: 3s;
+}
+
 footer {
     position: fixed;
     bottom: 0;
