--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
     color: var(--color-dark);
     font-family: var(--font--serif-body);
     margin: 0 0;
+    padding: 0 60px;
 
     display: flex;
     flex-direction: column;
