--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,12 @@ main div figure.flip:hover {
     transition: 3s;
 }
 
+.company:hover {
+    transform: scale(1.1);
+    transition: 1s;
+    box-shadow: 0px 10px 20px 2px var(--color-dark);
+}
+
 footer {
     position: fixed;
     bottom: 0;
