Adding new color

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ html {
     --color-light: #F3E1D5;
     --color-dark: #131313;
     --color-accent: #2E748A;
+    --color-valencia: #DC5A45;
     --font--serif-heading: 'ccr', 'Times New Roman', Times, serif;
     --font--serif-body: 'alexandria', 'Times New Roman', Times, serif;
 }
