--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,11 @@ main div.about {
     margin-bottom: 35px;
 }
 
+main div.about:hover {
+    transform: rotateY(180deg);
+    transition: 3s;
+}
+
 .left {
     transform: rotate(-20deg);    
     margin-bottom: 55px;
