Adding media queries for books

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,22 @@ main div ul li {
     line-height: 1.5rem;
 }
 
+@media (min-width: 1024px) {
+    .container {
+        display: grid;
+        grid-template-columns: 300px 300px;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 1420px) {
+    .container {
+        display: grid;
+        grid-template-columns: 300px 300px 300px;
+        justify-content: center;
+    }
+}
+
 .parent figure {
     margin-top: 4.25rem;
 }
