--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,10 @@ main div ul li {
     line-height: 1.5rem;
 }
 
+.embroidery {
+    max-width: 50ch;
+}
+
 @media (min-width: 1024px) {
     .container {
         display: grid;
