Updated h1 line height, width, and margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,9 @@ main div h1 {
     color: var(--color-dark);
     font-family: var(--font--serif-heading);
     font-size: 3rem;
+    line-height: 0.7;
+    max-width: 16ch;
+    margin: 32px auto;
     text-align: center;
 }
 
