--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,10 @@ nav {
 main {
     margin: 65px 35px 45px;
     max-width: 1100px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 main div h1 {
